# indicator-sync

./: MERGE-REVIEW  Makefile.am  Makefile.am.authors  Makefile.am.coverage  NEWS  autogen.sh  configure.ac
bindings/: Makefile  Makefile.am
bindings/python/: Makefile  Makefile.am  syncindicator.c  syncindicator.override  syncindicatormodule.c  syncindicatormodule.lo
bindings/python/.deps/: syncindicatormodule.Plo
data/: Makefile.am  indicator-sync.conf.in  indicator-sync.desktop.in  indicator-sync.service.in
data/icons/: Makefile.am  icon-theme.cache
data/icons/22x22/status/: Makefile.am
data/icons/24x24/status/: Makefile.am
data/upstart/: Makefile.am  indicator-sync.desktop.in
debian/: changelog  control  gir1.2-syncmenu-0.1.install  indicator-sync.install  libsync-menu-dev.install  libsync-menu1.install  rules  watch
docs/reference/: Makefile.am
docs/reference/libindicator-sync-client/: Makefile.am
examples/: Makefile.am  README  sync-app-example.c  sync-client-demo.c
indicator-sync/: .exrc  Makefile.am  app-menu-item.c  app-menu-item.h  dbus-shared.h  indicator-sync-client.pc.in.in  indicator-sync-client3-0.1.pc.in.in  indicator-sync.c  sync-client.c  sync-client.h  sync-client.xml  sync-enum.c  sync-enum.h  sync-service.c  sync-service.xml
m4/: gcov.m4
po/: POTFILES.in
src/: Makefile.am  dbus-shared.h  sync-app.xml  sync-service.xml
src/indicator/: Makefile.am  indicator-sync.c
src/service/: Makefile.am  app-menu-item.c  sync-service.c
src/sync-menu/: Makefile.am  sync-app.c  sync-app.h  sync-enum.c  sync-enum.h  sync-menu-0.1.pc.in
test/: Makefile.am  indicator-sync.service.in  test-client.cpp  test-gtest.cpp
tests/: manual
